--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <title>Spotify Alternative</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <h1>Spotify Alternative</h1>
 
-    <div class="test-content"></div>
+    <div id="test-content"></div>
+
+    <div><input type="range" min="0" max="0" value="0" id="scrub-control" disabled></input></div>
 
     <script async src="js/app.js"></script>
   </body>
